RESOLVED FIXED286490
REGRESSION (285925@main): [iOS] Selection highlights for non-editable content sometimes disappear
https://bugs.webkit.org/show_bug.cgi?id=286490
Summary REGRESSION (285925@main): [iOS] Selection highlights for non-editable content...
Wenson Hsieh
Reported 2025-01-24 11:27:43 PST
Attachments
Wenson Hsieh
Comment 1 2025-01-24 12:01:15 PST
EWS
Comment 2 2025-01-24 15:10:12 PST
Committed 289369@main (4aac13b07923): <https://commits.webkit.org/289369@main> Reviewed commits have been landed. Closing PR #39510 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.